# Delivery

./: .classpath  .gitignore  .gitmodules  .project  AndroidManifest.xml  build.gradle  comm.gradle  config.gradle  gradle.properties  local.properties  project.properties  script.gradle  settings.gradle  stdkey  unit_test_script.gradle
EachBeanHuman/: build.gradle
InnerAnnotate-compiler/: build.gradle
STBase/: build.gradle
STDb/: build.gradle
STDlibrary_res/: .project  AndroidManifest.xml  build.gradle
STFlutterBridge/: build.gradle
STLocation/: build.gradle
STNetwork/: build.gradle
STWebwap/: build.gradle
SlidingResource/: .project  AndroidManifest.xml
StdPlugin/: build.gradle
annotation-api/: build.gradle
annotation-compiler/: build.gradle
app/: build.gradle  proguard-rules.pro  proguard.cfg
assets/: dynamic_sample.txt  event.txt  illegalwords.txt  index.html
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/jni/: decode_audio.c  native-lib.cpp
ffmpeg/src/androidTest/java/com/std/framework/ffmpeg/: ExampleInstrumentedTest.java  FFMediaConvertTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/java/com/std/framework/ffmpeg/: FFMediaConvert.java  FFmpegTool.java  Format.java
ffmpeg/src/main/jni/: decode_audio.c  decode_audio.h  encode_audio.c  encode_audio.h
ffmpeg/src/main/jni/include/libavutil/: ffversion.h
ffmpeg/src/test/java/com/std/framework/ffmpeg/: ExampleUnitTest.java
flutter_app/: pubspec.yaml
flutter_architect/: .packages  README.md  pubspec.yaml
flutter_lib/: .flutter-plugins  .flutter-plugins-dependencies  .packages  README.md  pubspec.yaml
flutter_module/: .flutter-plugins-dependencies  .gitignore  .metadata  pubspec.yaml
framework/: build.gradle
(+1876 files in other folders)
